# PhuzzyMatcher

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
match_lists/: animal_names.csv
notebooks/: fuzzy_phrase_matcher.ipynb
scripts/: fuzzy_phrase_matcher.py  utils.py
