[tool.poetry]
name = "phuzzymatcher"
version = "0.1.0"
description = ""
authors = ["Sebmenke <smenke@savanamed.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
spacy = "^2.2.4"
nltk = "^3.5"
rapidfuzz = "^0.7.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
